tolk-tester/tests/invalid-syntax/err-3825.tolk
import "@mylib"

/**
@compilation_should_fail
@stderr import path with @ prefix must specify a file
 */
